--- a/package.json
+++ b/package.json
@@ -7,13 +7,20 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "better-scroll": "^1.13.2",
+    "lodash": "^4.17.11",
+    "mint-ui": "2.2.9",
+    "swiper": "3.4.2",
     "vue": "^2.5.17",
+    "vue-progressbar": "^0.7.5",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.1.0",
     "@vue/cli-service": "^3.1.0",
+    "babel-plugin-component": "^1.1.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
     "vue-template-compiler": "^2.5.17"
